--- a/In Working/scss/main.scss
+++ b/In Working/scss/main.scss
@@ -349,6 +349,18 @@
     }
 }
 
+.sidebar{
+    width: 240px;
+    padding: 0 30px;
+    
+}
+
+.accordion__head{
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
 
 
