--- a/In Working/scss/main.css
+++ b/In Working/scss/main.css
@@ -41,6 +41,7 @@ ol, ul {
   padding: 0;
   outline: none;
   -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   -o-box-sizing: border-box;
   box-sizing: border-box; }
 
@@ -74,23 +75,15 @@ body {
   background: #fff; }
 
 .top-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   height: 80px;
   padding: 0 30px; }
   .top-menu .logo {
     margin-right: 30px; }
 
 .menu-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-right: 20px; }
   .menu-list__item {
@@ -102,7 +95,6 @@ body {
     padding: 0 10px;
     color: #222222;
     line-height: 80px;
-    -webkit-transition: color 0.3s;
     transition: color 0.3s; }
     .menu-list__link:hover {
       color: #1f4ba5; }
@@ -114,20 +106,19 @@ body {
 
 .dropdown-list {
   position: absolute;
+  z-index: 99;
   display: none;
   width: 240px;
   left: 0;
   top: 100%;
   padding: 30px;
   background: #222222;
-  -webkit-transition: all 1s;
   transition: all 1s; }
   .dropdown-list-item {
     line-height: 24px;
     font-size: 12px; }
   .dropdown-list__link {
     color: #979797;
-    -webkit-transition: all 0.3s;
     transition: all 0.3s; }
     .dropdown-list__link:hover {
       color: #fff; }
@@ -145,9 +136,7 @@ body {
 
 .search {
   position: relative;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   margin-right: 20px; }
   .search-input {
     width: 100%;
@@ -156,6 +145,9 @@ body {
     outline: none;
     padding: 0 40px 0 20px;
     background: #f6f6f6;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
     border-radius: 20px; }
     .search-input.placeholder {
       font-size: 12px;
@@ -196,12 +188,8 @@ body {
     font-size: 12px; }
 
 .cart {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   margin-right: 20px; }
   .cart [class*="icon-"] {
     position: relative;
@@ -215,6 +203,9 @@ body {
     height: 15px;
     text-align: center;
     background: #1f4ba5;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
     border-radius: 50%;
     color: #fff;
     font-size: 9px;
@@ -232,11 +223,143 @@ body {
 
 .user-link {
   display: inline-block;
-  color: red;
+  color: #222222;
   font-size: 16px; }
   .user-link:hover {
     color: #1f4ba5; }
   .user-link [class*="icon-"] {
     line-height: 80px; }
+
+.baner {
+  position: relative;
+  height: 180px;
+  background-position: right top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px 30px; }
+  .baner .breadcrumps {
+    position: absolute;
+    left: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #979797;
+    font-size: 12px; }
+    .baner .breadcrumps-item {
+      display: inline-block; }
+      .baner .breadcrumps-item__link {
+        color: inherit;
+        transition: all 0.3s; }
+        .baner .breadcrumps-item__link:hover {
+          color: #222222; }
+  .baner .categorie {
+    font-size: 12px;
+    color: #1f4ba5;
+    margin-bottom: 10px; }
+  .baner .baner-titel {
+    font-size: 48px; }
+
+.categorie {
+  font-family: "Oswald", Arial, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.filter {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  border-bottom: 1px solid #ececec; }
+  .filter-sidebar {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    align-items: center;
+    min-height: 60px;
+    width: 240px;
+    border-right: 1px solid #ececec;
+    padding: 15px 30px; }
+  .filter__title {
+    font-size: 12px;
+    color: #979797;
+    margin-right: 20px; }
+  .filter-content {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 30px; }
+
+.toggle_filter {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  margin-right: 15px; }
+  .toggle_filter [class*="icon-"]:before {
+    transition: all 0.3s;
+    color: #d5d5d5; }
+  .toggle_filter:hover [class*="icon-"]:before {
+    color: #222222; }
+
+.sort {
+  overflow: hidden; }
+  .sort input {
+    position: absolute;
+    left: -999px; }
+  .sort label {
+    display: inline-block;
+    width: 90px;
+    height: 30px;
+    line-height: 30px;
+    margin-right: 20px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 12px;
+    color: #222222;
+    transition: all 0.3s;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    border-radius: 20px; }
+    .sort label:hover {
+      background: #222222;
+      color: #fff; }
+    .sort label [class*="icon-"] {
+      margin-left: 8px;
+      font-size: 12px; }
+      .sort label [class*="icon-"]:before {
+        color: #d5d5d5; }
+
+.filter-list {
+  display: flex;
+  align-items: center; }
+  .filter-list__item {
+    display: inline-block;
+    margin-left: 10px; }
+  .filter-list__link {
+    display: block;
+    font-size: 16px; }
+    .filter-list__link [class*="icon-"]:before {
+      color: #d5d5d5;
+      transition: all 0.3s; }
+    .filter-list__link.active [class*="icon-"]:before {
+      color: #222222; }
+    .filter-list__link:hover [class*="icon-"]:before {
+      color: #979797; }
+
+.sidebar {
+  width: 240px;
+  padding: 0 30px; }
 
 /*# sourceMappingURL=main.css.map */
