--- a/In Working/scss/main.css
+++ b/In Working/scss/main.css
@@ -362,4 +362,10 @@ body {
   width: 240px;
   padding: 0 30px; }
 
+.accordion__head {
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+
 /*# sourceMappingURL=main.css.map */
