--- a/In Working/css/main.css
+++ b/In Working/css/main.css
@@ -396,7 +396,7 @@ body {
 
 .sidebar {
   width: 240px;
-  padding: 0 30px; }
+  border-right: 1px solid #ececec; }
   .sidebar-list label {
     margin-left: 10px;
     font-size: 12px;
@@ -423,7 +423,15 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  cursor: pointer; }
+  padding: 0 30px;
+  cursor: pointer;
+  border-top: 1px solid #efefef; }
+  .accordion__head:first-child {
+    border-top: none; }
+
+.accordion__body {
+  padding: 0 30px;
+  margin-bottom: 30px; }
 
 .size {
   display: -webkit-box;
@@ -438,6 +446,111 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap; }
   .size .sidebar-list__item {
-    width: 40%; }
+    width: 40%;
+    margin-left: 10px; }
+
+.price__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 10px; }
+  .price__item input {
+    width: 50px;
+    text-align: center;
+    color: red;
+    border: none; }
+
+.ui-state-default, .ui-widget-content .ui-state-default {
+  border: 4px solid #1f4ba5;
+  border-radius: 50%;
+  background: #fff; }
+
+.ui-state-active, .ui-widget-content .ui-state-active {
+  background: #fff; }
+
+.ui-widget-header {
+  background: #1f4ba5; }
+
+.ui-widget.ui-widget-content {
+  border: none;
+  background: #efefef;
+  border-radius: 20px; }
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 60px;
+  background: #222222; }
+  .footer .sidebar {
+    padding: 0 30px; }
+  .footer .copyright {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 100%;
+    width: 240px;
+    border-right: 1px solid #353535;
+    font-size: 12px;
+    color: #757575;
+    font-family: "PT Serif", Arial, sans-serif; }
+  .footer .support {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .footer .support-item {
+      margin: 0 10px;
+      font-size: 12px;
+      color: #adadad; }
+      .footer .support-item__link {
+        color: inherit;
+        -webkit-transition: all 0.3s;
+        transition: all 0.3s; }
+        .footer .support-item__link:hover {
+          color: #fff; }
+  .footer .pay {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 100%;
+    width: 240px;
+    border-left: 1px solid #353535;
+    padding-right: 20px; }
+    .footer .pay-link {
+      margin: 0 10px;
+      color: #656565;
+      font-size: 26px;
+      line-height: 26px;
+      -webkit-transition: all 0.3s;
+      transition: all 0.3s; }
+      .footer .pay-link:hover {
+        color: #fff; }
 
 /*# sourceMappingURL=main.css.map */
