--- a/In Working/scss/main.scss
+++ b/In Working/scss/main.scss
@@ -351,7 +351,7 @@
 
 .sidebar{
     width: 240px;
-    padding: 0 30px;
+    border-right: 1px solid #ececec;
     
     &-list{
         
@@ -378,24 +378,126 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 30px;
     cursor: pointer;
+    border-top: 1px solid #efefef;
+    
+    &:first-child{
+        border-top: none;
+    }
 }
-
+.accordion__body{
+    padding: 0 30px;
+    margin-bottom: 30px;
+}
 
 .size{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    
     .sidebar-list__item{
     width: 40%;
+        margin-left: 10px;
     }
 }
 
+.price__item{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    input{
+        width: 50px;
+        text-align: center;
+        color: red;
+        border: none;
+    }
+    
+}
+.ui-state-default, .ui-widget-content .ui-state-default{
+    border: 4px solid $accent;
+    @include border-radius(50%);
+    background: #fff;
+}
 
+.ui-state-active, .ui-widget-content .ui-state-active{
+    background: #fff;
+}
 
+.ui-widget-header{
+    background: $accent;
+}
+.ui-widget.ui-widget-content{
+    border: none;
+    background: #efefef;
+    @include border-radius(20px);
+}
 
-
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    background: $color;
+    
+    .sidebar{
+        padding: 0 30px;
+    }
+    
+    .copyright{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        width: 240px;
+        border-right: 1px solid #353535;
+        font-size: 12px;
+        color: #757575;
+        font-family: $font1, Arial, sans-serif;
+    }
+    
+    .support{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        &-item{
+            margin: 0 10px;
+            font-size: 12px;
+            color: #adadad;
+            
+            &__link{
+                color: inherit;
+                transition: all 0.3s;
+                &:hover{
+                    color: #fff;
+                }
+            }
+        }
+    }
+    
+    .pay{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        height: 100%;
+        width: 240px;
+        border-left: 1px solid #353535;
+        padding-right: 20px;
+        
+        &-link{
+            margin: 0 10px;
+            color: #656565;
+            font-size: 26px;
+            line-height: 26px;
+            transition: all 0.3s;
+            &:hover{
+                color: #fff;
+            }
+        }
+    }
+}
 
 
 
