--- a/In Working/css/main.css
+++ b/In Working/css/main.css
@@ -394,6 +394,146 @@ body {
     .filter-list__link:hover [class*="icon-"]:before {
       color: #979797; }
 
+.box-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
+  .product-item {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    width: 240px;
+    height: 360px;
+    padding: 30px;
+    border-right: 1px solid #d5d5d5;
+    border-bottom: 1px solid #d5d5d5;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s; }
+    .product-item__img {
+      display: block;
+      margin: 43px 0 63px; }
+    .product-item__price {
+      font-size: 12px;
+      font-family: "Oswald", Arial, sans-serif;
+      font-weight: bold; }
+    .product-item__hover {
+      position: absolute;
+      top: -1000px;
+      left: 0;
+      width: 240px;
+      height: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      padding: 30px 20px;
+      background: rgba(0, 0, 0, 0.8); }
+      .product-item__hover .product-title {
+        color: #fff; }
+      .product-item__hover .wishlist {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        margin-top: 20px;
+        color: #b8b8b8;
+        font-size: 12px;
+        font-family: "PT Serif", Arial, sans-serif;
+        font-style: italic;
+        -webkit-transition: all 0.3s;
+        transition: all 0.3s; }
+        .product-item__hover .wishlist:hover {
+          color: #fff; }
+        .product-item__hover .wishlist [class*="icon-"] {
+          font-size: 16px;
+          margin-right: 8px; }
+  .product-title {
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: bold; }
+  .product-button {
+    display: inline-block;
+    width: 110px;
+    height: 32px;
+    margin-left: 6px;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: #1f4ba5;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    color: #fff; }
+
+.product-item:hover .product-item__hover {
+  top: 0; }
+.product-item:hover .product-item__price {
+  display: none; }
+
+.price-box {
+  margin-bottom: -7px; }
+
+.sale-price {
+  font-size: 12px;
+  font-weight: bold;
+  font-family: "Oswald";
+  color: #ff3f2b; }
+
+.jq-selectbox__select {
+  width: 80px;
+  border-radius: 20px; }
+
+.jq-selectbox__select-text.placeholder {
+  width: 100% !important;
+  font-family: "PT Serif";
+  font-style: italic;
+  font-size: 12px; }
+
+.jq-selectbox__trigger {
+  border: none; }
+
+.jq-selectbox__dropdown {
+  border: none;
+  overflow: hidden; }
+
+.jq-selectbox li {
+  border-bottom: 1px solid #d5d5d5;
+  color: #222222; }
+  .jq-selectbox li:hover {
+    background: #1f4ba5; }
+
 .sidebar {
   width: 240px;
   border-right: 1px solid #ececec; }
